new index and css

--- a/index.html
+++ b/index.html
@@ -4,400 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Team Schedule</title>
-    <link rel="stylesheet" href="minimal-table.css">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="dailyschedule.css">
 </head>
 
 <body>
     <header></header>
-    <h1>Schedule <span>Jan 29 - Feb 4</span></h1>
-    <div class="days">
-        <table class="monday">
-            <caption>Team Schedule for <span>Monday</span> <span id="monday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"><span id="emp-name"></span></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <table>
-            <caption>Team Schedule for <span>Tuesday</span> <span id="tuesday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <table>
-            <caption>Team Schedule for <span>Wednesday</span> <span id="wednesday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <table>
-            <caption>Team Schedule for <span>Thursday</span> <span id="thursday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <table>
-            <caption>Team Schedule for <span>Friday</span> <span id="friday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <table>
-            <caption>Team Schedule for <span>Saturday</span> <span id="saturday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <table>
-            <caption>Team Schedule for <span>Sunday</span> <span id="sunday-date"></span></caption>
-            <thead>
-                <tr>
-                    <th class="cook-name" scope="col">Cook</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                    <th class="server-name" scope="col">Server</th>
-                    <th>AM</th>
-                    <th>PM</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    <nav>
+        <ul>
+            <li><a href="">Previous</a></li>
+            <li><a href="">Next</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Monday</a></li>
+            <li><a href="">Tuesday</a></li>
+            <li><a href="">Wednesday</a></li>
+            <li><a href="">Thursday</a></li>
+            <li><a href="">Friday</a></li>
+            <li><a href="">Saturday</a></li>
+            <li><a href="">Sunday</a></li>
+        </ul>
+    </nav>
+    <table>
+        <caption>Schedule <span>Monday</span><span></span></caption>
+        <thead>
+            <th>Staffing</th>
+            <th>Morning</th>
+            <th>Afternoon</th>
+        </thead>
+        <tbody>
+            <tr>
+                <th rowspan="6">Cooks</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th rowspan="6">Servers</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th rowspan="4">Dish</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
