--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
                 <td></td>
             </tr>
             <tr>
+                <th rowspan="4">Hosts</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
                 <th rowspan="4">Dish</th>
             </tr>
             <tr>
